Fix - show circle behind the hamburger icon

--- a/Workspace/04-portfolio/style.css
+++ b/Workspace/04-portfolio/style.css
@@ -141,6 +141,25 @@ section {
   border-bottom: 4px solid #007bff;
 }
 
+.nav-button {
+  outline: none;
+  position: relative;
+  margin-bottom: 7px; /* when hamburger menu is clicked the background rounded circle was getting cut */
+}
+/* show circle behind the hamburger icon */
+.nav-button:after {
+  content: '';
+  position: absolute;
+  top: -4px;
+  right: -6px;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  /* background: radial-gradient(#fff, #ccc); */
+  z-index: -1;
+  box-shadow: 1px 2px 5px #ccc;
+}
+
 /* to show 3 line (hamburger) */
 .line1,
 .line2,
